[workspace]
members = [
    "contracts/cw20-wrapped",
    "contracts/wormhole",
    "contracts/token-bridge",
    "packages/terra-cosmwasm-2.2.0",
    "packages/cw20-legacy",
    "contracts/mock-bridge-integration",
    # TODO: we should delete these probably, they're not being used, and haven't been migrated to cosmwasm 1.0.0
    # "contracts/cw721-base",
    # "contracts/nft-bridge",
    # "contracts/cw721-wrapped",
    # "packages/cw721",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[patch.crates-io]
terra-cosmwasm = { path = "./packages/terra-cosmwasm-2.2.0" }
cw20-legacy = { path = "./packages/cw20-legacy" }
